# ROS

./: README.md
src/beginner_tutorials/: CMakeLists.txt  package.xml
src/beginner_tutorials/scripts/: intermedio.py  listener.py  talker.py
src/opencv_example/: CMakeLists.txt  package.xml
src/opencv_example/launch/: opencv_example_testing.launch
src/opencv_example/src/: opencv_change_contrast_hh.cpp  opencv_grayImage_hh.cpp  opencv_houghCircleTransform_hh.cpp  opencv_smoothingImages_hh.cpp  opencv_template_node.cpp  opencv_template_node_hh.cpp
src/ros_arduino/: CMakeLists.txt  package.xml
src/ros_arduino/src/: nodo_a.cpp  nodo_b.cpp  nodo_c.cpp  nodo_d.cpp  nodo_e.cpp  nodo_f.cpp  nodo_g.cpp  nodo_n1.cpp  nodo_n2.cpp  nodo_p.cpp
